--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: 'Orbitron', sans-serif;
-    background-color: #0d1b2a;
+    background-color: #000;
     color: #fff;
     text-align: center;
     cursor: none;
@@ -206,5 +206,41 @@ nav a:hover, button:hover {
     50% {
         transform: translate(-50%, 10px);
     }
+}
+
+.solar-system {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 50px auto;
+}
+
+.sun {
+    width: 50px;
+    height: 50px;
+    background: yellow;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 20px rgba(255, 255, 0, 0.8);
+}
+
+.planet {
+    width: 20px;
+    height: 20px;
+    background: blue;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: -50px -50px;
+    animation: orbit 4s linear infinite;
+}
+
+@keyframes orbit {
+    from { transform: rotate(0deg) translateX(50px); }
+    to { transform: rotate(360deg) translateX(50px); }
 }
 /* The End! */
